fixing alignment of dropdown of menu position mobile view

--- a/code/less/template-responsive.less
+++ b/code/less/template-responsive.less
@@ -206,8 +206,7 @@
 		float: left;
 		width: auto;
 	}
-	.wrapper-toolbar,
-	.wrapper-logo-menu {
+	.wrapper-toolbar {
 		position: relative;
 	}
 
@@ -354,12 +353,20 @@
 			float: right;
 		}
 	}
+
 	#menu{
 		width: 81px;
 		float: right;
 		border-left: 1px solid @navtabsBgHover;
+
 		.btn-navbar{
 			float: right;
+		}
+
+		.nav-collapse {
+			margin: 0 auto;
+			right: 0;
+			width : 724px;
 		}
 	}
 	.navbar-inner {
